# sc2sentry

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  secrets.toml.example  settings.toml
.github/workflows/: pre-commit.yml
alembic/: env.py
alembic/versions/: 85eb3da43021_.py  f6122e2b89c0_.py
src/sc2sentry/: __init__.py  config.py  db.py  main.py
src/sc2sentry/auth/: backend.py  fastapi_users_instance.py  manager.py  models.py  routers.py
src/sc2sentry/exts/: __init__.py  minio.py
src/sc2sentry/utils/: __init__.py  base_models.py
tests/: test_auth.py  test_exts.py
