[project]
name = "sc2sentry"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "NumberPigeon", email = "number108@foxmail.com" }
]
dependencies = [
    "fastapi>=0.101.0",
    "uvicorn[standard]>=0.23.2",
    "sqlalchemy>=2.0.19",
    "fastapi-users[sqlalchemy]>=12.1.0",
    "dynaconf>=3.2.0",
    "asyncpg>=0.28.0",
    "setuptools>=68.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev_dependencies = []
dev-dependencies = [
    "pytest>=7.4.0",
    "alembic>=1.11.2",
    "httpx>=0.24.1",
    "trio>=0.22.2",
    "psycopg2-binary>=2.9.7",
]

[tool.hatch.metadata]
allow-direct-references = true
